# Quantaire-2

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  PRODUCT.md  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/analysis/: engine.py
app/charts/: __init__.py  generator.py  style.py
app/config/: __init__.py  settings.py
app/data/: __init__.py  fetcher.py  normalizer.py  validator.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  price_action.py
app/utils/: __init__.py  logging.py  paths.py
app/vision/: client.py  detector.py
backend/: cli.py  pyproject.toml
backend/api/: main.py
backend/api/routers/: analysis.py  root.py
backend/app/: exceptions.py
backend/app/analysis/: __init__.py  engine.py
backend/app/charts/: generator.py  style.py
backend/app/config/: settings.py
backend/app/data/: fetcher.py  normalizer.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  factory.py  price_action.py  run_pipeline.py
backend/app/utils/: paths.py
backend/app/vision/: __init__.py  client.py  detector.py
configs/: settings.py
detector/: __init__.py  inference.py  model.py  postprocess.py  visualize.py
docs/: rn.md
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
pipeline/: __init__.py  analyze.py  main.py
test/: model.py  test.py  test2.py
tests/: __init__.py
tradingview/: __init__.py  browser.py  capture.py  run_scanner.py  screenshot.py  search.py  timeframe.py
web/: app.py
web/templates/: base.html  index.html  results.html
(+11 files in other folders)
