[project]
name = "pattern-detections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "opencv-python-headless>=4.13.0.92",
    "playwright>=1.60.0",
    "python-multipart>=0.0.29",
    "ultralytics>=8.4.53",
    "uvicorn[standard]>=0.48.0",
]
